Fri Nov 24 16:58:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/IPC_SAP.cpp:

          WSAEventSelect is not available on Windows CE, so the #ifdefs
          were changed so it calls ioctl on Windows CE also.

Fri Nov 24 15:43:20 2000  Carlos O'Ryan  <coryan@uci.edu>

	* docs/ACE-categories.html:
	  Fixed URLs to Doxygen documents, I used the absolute URL to our
	  Doxygen site, but in the future we may want to do that
	  configurable.

        * bin/auto_run_tests.lst:
          Disable the Connection_Purging test in TAO, it never worked and
          the features are disabled while we continue to improve the
          Connection Cache.

Fri Nov 24 11:42:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ACE_INSTALL.html:

          Updated sections about Windows CE and MSVC.  CE stuff
          is documented in CE-status.txt, and removed references to old
          MSVC 4.2 projects.  Thanks to Johhny Willemsen
          <johnny.willemsen@meco.nl> for pointing this out.

Fri Nov 24 05:48:26 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Signal.h: Enhanced the documentation to clarify the role of sigkey.
	  Thanks to Oscar Rodriquez <Oscar.Rodriquez@eln.ericsson.se> for
 	  motivating this.

	* ace/SOCK_Connector.h: Updated the documentation to clarify the parameters to 
	  the constructors and the connect() method.  Thanks to Pierre
 	  Oberson <oberson@nagra-kudelski.ch> for suggesting this.

Thu Nov 23 21:17:16 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/Reactor_Notify_Test.cpp (main): added
          auto_ptr<ACE_Reactor> so that the global Reactor instance
          will be destroyed at the termination of main ().  The cleans
          up memory leaks that we introduced in this change to the test:
          Tue Oct 24 12:30:47 2000  Steve Huston  <shuston@riverace.com>

Thu Nov 23 18:38:54 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * Makefile: